`category` can only be string in liquid 2.4.1
Got:
Liquid Exception: private method `gsub' called for ["BioInformatics", "analyse"]:Array in post

So, all category changed from Array to single.

--- a/_posts/2012-03-26-cal-n50-n90.md
+++ b/_posts/2012-03-26-cal-n50-n90.md
@@ -4,8 +4,8 @@ layout: post
 slug: cal-n50-n90
 title: "计算序列的N50、N90等"
 description: ""
-category: [BioInformatics, analyse]
-tags: [Biology, Galaxy, Programming]
+category: BioInformatics
+tags: [Biology, Galaxy, Programming, Analyse]
 wordpress_id: '1146'
 ---
 {% include JB/setup %}
