--- a/_posts/2012-06-09-on-casava.md
+++ b/_posts/2012-06-09-on-casava.md
@@ -4,7 +4,7 @@ date: 'Sat 2012-06-09 14:57:02 +0800'
 slug: "on-casava"
 title: "On CASAVA"
 description: ""
-category: [BioInformatics, illumina]
+category: BioInformatics
 tags: [Galaxy_Original, illumina, CASAVA]
 ---
 {% include JB/setup %}
