modified:   2014-02-16-KBS.md

--- a/_posts/2014-02-16-KBS.md
+++ b/_posts/2014-02-16-KBS.md
@@ -3,6 +3,23 @@ layout: post
 title: Kramdown翻译器的高级格式
 category: network
 status: publish
+tags: [ZT, Abyss]
+---
+
+额，这个得加说明了。
+来源是[某人的博客](http://blog.nayuki.info/categories/network/KBS.html), 但需要结合[CSS](https://github.com/moenayuki/SimpleGray/blob/master/assets/css/site.css)才能出效果。
+
+Galaxy 是被这个[博客模版](https://github.com/moenayuki/SimpleGray)萌到了，想套用。但发现它没`Tag`支持，想加上，所以就没直接套用。
+
+至于这个坑啥时填，额，不知道……
+
+话说，咱刚找了个“坑”的英译，abyss。是查日语“奈落”的英语时选的。含义是：
+
+	n. hole so deep that it seems to have no bottom 深渊
+	*(fig 比喻) an abyss of ignorance, despair, loneliness, etc 无知的, 绝望的, 寂寞的...深渊.
+	
+用`Abyss`来代表“坑”，果然很合适的说。
+
 ---
 
 由于本博客使用[kramdown](http://kramdown.gettalong.org)作为markdown的翻译机，且kramdown本身又是markdown的一个超集，于是它便支持一些特别的使用技巧，比如[Inline Attribute Lists](http://kramdown.gettalong.org/syntax.html#attribute-list-definitions)。
