modified:   _posts/2014-06-15-Alfred01.md 	modified:   _posts/2014-08-16-Alfred02.md

--- a/_posts/2014-06-15-Alfred01.md
+++ b/_posts/2014-06-15-Alfred01.md
@@ -2,9 +2,11 @@
 layout: post
 title: "丢掉鼠标－Mac神软Alfred使用手册1"
 date: 2014-06-15 19:59:42
-categories: jekyll update
-tags: Alfred Mac
+categories: Mac
+tags: Alfred
 ---
+
+__注0:本文转自https://github.com/wellsnake/wellsnake.github.io。__
 
 __注1：本文写于WWDC 14之前，当苹果在WWDC14上发布了OS X最新版Yosemite的时候，发现其中的Spotlight已经进化了，看上去完全就是和Alfred一个模子里出来的，甚至界面比Alfred更漂亮。不过个人认为这并不影响Alfred在Mac上作为神软的地位，除了Spotlight上的那些功能外，Alfred的神级功能Workflows也是Spotlight无法超越的。另外原来只是打算写个简单的介绍的，不过发现越写越长，索性就叫使用手册吧。__
 
