modified:   _posts/2014-08-16-Alfred02.md

--- a/_posts/2014-08-16-Alfred02.md
+++ b/_posts/2014-08-16-Alfred02.md
@@ -6,7 +6,11 @@ categories: Mac
 tags: Alfred WorkFlow
 ---
 
-__注0:本文转自https://github.com/wellsnake/wellsnake.github.io。__
+<font color="navy">注0: 本文转自https://github.com/wellsnake/wellsnake.github.io。<br>
+网站 http://alfredworkflow.com/ 是`Alfred 2`的 Workflows List。<br>
+然后发现某个团子也写了些：http://kodango.com/category/internet-development/add-ons/<br>
+额，图片暂且继续用`wellsnakeblog.qiniudn.com`空间的吧，转载过来还得写脚本抓……
+</font>
 
 ## 前言
 等了那么久，Alfred用户手册第二篇也终于出来了！上一篇中详细介绍了Alfred的基本查询功能和一些收费功能。第一次写这么长的教程收到了不少读者好评也给了很多意见。有细心的读者还给我提交了Alfred的Bug，为了给读者一个答复我用非常蹩脚的英语给Alfred官网提交了Bug很快便得到了回复，具体Bug信息可以参见[上一篇](http://wellsnake.com/jekyll/update/2014/06/15/001/ "Alfred用户手册1")的评论。
