modified:   _posts/2015-11-03-on-pca.md

--- a/_posts/2015-11-03-on-pca.md
+++ b/_posts/2015-11-03-on-pca.md
@@ -4,7 +4,7 @@ date: 'Tue 2015-11-03 19:05:36 +0800'
 slug: "on-pca"
 title: "On PCA"
 description: ""
-category: 
+category: Bioinformatics
 tags: Biology, Galaxy_Original
 ---
 {% include JB/setup %}
