modified:   _posts/2015-11-03-on-pca.md

--- a/_posts/2015-11-03-on-pca.md
+++ b/_posts/2015-11-03-on-pca.md
@@ -60,6 +60,18 @@ Singular value decomposition (SVD) of X.
 `?prcomp`  
 The calculation is done by a singular value decomposition of the (centered and possibly scaled) data matrix, not by using ‘eigen’ on the covariance matrix.  This is generally the preferred method for numerical accuracy.
 
+### ALS
+
+Alternating least squares (ALS) algorithm. This algorithm finds the best rank-k approximation by factoring X into a n-by-k left factor matrix, L, and a p-by-k right factor matrix, R, where k is the number of principal components. The factorization uses an iterative method starting with random initial values.  
+ALS is designed to better handle missing values. It is preferable to pairwise deletion ('Rows','pairwise') and deals with missing values without listwise deletion ('Rows','complete'). It can work well for data sets with a small percentage of missing data at random, but might not perform well on sparse data sets.
+
+`?homals`
+
+~~~R
+##Single ranks for each variable (non-linear PCA)
+res <- homals(galo, active = c(rep(TRUE, 4), FALSE), sets = list(c(1,3,4),2,5))
+~~~
+
 ### EIG vs SVD ? SVD !
 
 > The EIG algorithm is faster than SVD when the number of observations, n, exceeds the number of variables, p, but is less accurate because the condition number of the covariance is the square of the condition number of X.  
@@ -96,3 +108,16 @@ http://www.cnblogs.com/LeftNotEasy/archive/2011/01/19/svd-and-applications.html
 <http://stats.stackexchange.com/questions/35561/imputation-of-missing-values-for-pca>
 
 <http://menugget.blogspot.com/2014/09/pca-eof-for-data-with-missing-values.html>
+
+
+另外，还有一个专门作PCA分析的包：[pcaMethods](http://bioconductor.org/packages/devel/bioc/html/pcaMethods.html)
+
+
+下面这一段来自 CRAN Task View: Chemometrics and Computational Physics http://cran.r-project.org/web/views/ChemPhys.html
+Principal Component Analysis
+
+* Principal component analysis (PCA) is in the package stats as functions princomp(). Some graphical PCA representations can be found in the psy package.
+* The homals package provides nonlinear PCA and, by defining sets, nonlinear canonical correlation analysis (models of the Gifi-family).
+* A desired number of robust principal components can be computed with the pcaPP package. The package elasticnet is applicable to sparse PCA. The package fpca can be applied to restricted MLE for functional PCA.
+* See the Multivariate task view for further packages dealing with PCA and other projection methods.
+
