modified:   _posts/2015-11-03-on-pca.md

--- a/_posts/2015-11-03-on-pca.md
+++ b/_posts/2015-11-03-on-pca.md
@@ -11,7 +11,7 @@ tags: Biology, Galaxy_Original
 
 # Introduction to PCA
 
-{:toc}
+Principal Component Analysis (PCA), also called Empirical Orthogonal Function analysis (EOF).
 
 ## Types of PCA in Biology
 
@@ -81,6 +81,27 @@ res <- homals(galo, active = c(rep(TRUE, 4), FALSE), sets = list(c(1,3,4),2,5))
 
 > [Why PCA of data by means of SVD of the data?](http://stats.stackexchange.com/questions/79043) -- a discussion of what are the benefits of performing PCA via SVD [short answer: numerical stability].  
 > --<http://stats.stackexchange.com/questions/134282/relationship-between-svd-and-pca-how-to-use-svd-to-perform-pca>
+
+## Missing Values
+
+See [PCA / EOF for data with missing values - a comparison of accuracy](http://menugget.blogspot.com/2014/09/pca-eof-for-data-with-missing-values.html).
+
+
+Not all Principal Component Analysis (PCA) (also called Empirical Orthogonal Function analysis, EOF) approaches are equal when it comes to dealing with a data field that contain missing values (i.e. "gappy"). The following post compares several methods by assessing the accuracy of the derived PCs to reconstruct the "true" data set, as was similarly conducted by Taylor et al. (2013). 
+
+The gappy EOF methods to be compared are:
+
+1. **LSEOF** - "*Least-Squares Empirical Orthogonal Functions*" - The traditional approach, which modifies the covariance matrix used for the EOF decomposition by the number of paired observations, and further scales the projected PCs by these same weightings (see Björnsson and Venegas 1997, von Storch and Zweiers 1999 for details). [link](http://menugget.blogspot.de/2011/11/empirical-orthogonal-function-eof.html)
+2. **RSEOF** - "*Recursively Subtracted Empirical Orthogonal Functions*" - This approach modifies the LSEOF approach by recursively solving for the leading EOF, whose reconstructed field is then subtracted from the original field. This recursive subtraction is done until a given stopping point (i.e. number of EOFs, % remaining variance, etc.) (see Taylor et al. 2013 for details)
+3. **DINEOF** - "*Data Interpolating Empirical Orthogonal Functions*" - This approach gradually solves for EOFs by means of an iterative algorothm to fit EOFS to a given number of non-missing value reference points (small percentage of observations) via RMSE minimization (see Beckers and Rixen 2003 for details). [link](http://menugget.blogspot.de/2012/10/dineof-data-interpolating-empirical.html)
+
+![RMSE plot](http://3.bp.blogspot.com/-M2j1ZNmUdqU/VBbTktwK51I/AAAAAAAAE7w/wEOZYCEGUZ4/s1600/slp_eof_recon_error.png)
+
+All analyses can be reproduced following installation of the "sinkr" package: <https://github.com/marchtaylor/sinkr>
+
+![](http://2.bp.blogspot.com/-TCwK1f2uWSg/VBGtCFWC0fI/AAAAAAAAE6Q/bY7t6G50CA0/s1600/eof_interpolation.png)
+
+The DINEOF method appears to be a good choice in the estimation of EOFs in gappy data. One is obviously not going to have a "true" data set by which to gauge the relative performance of approaches, but given the guidelines of selecting reference values, DINEOF should perform well under most cases. The RSEOF method also does a good job in correcting for the issues of LSEOF, and is also much less computationally intensive than DINEOF - In the SLP example, deriving 25 EOFs from the data field (dimensions = 1536 x 451) took 68 sec. with DINEOF vs 14 sec. with RSEOF (~20% of the time).
 
 ## etc
 
