modified:   _posts/2015-11-03-on-pca.md

--- a/_posts/2015-11-03-on-pca.md
+++ b/_posts/2015-11-03-on-pca.md
@@ -130,6 +130,8 @@ http://www.cnblogs.com/LeftNotEasy/archive/2011/01/19/svd-and-applications.html
 
 <http://menugget.blogspot.com/2014/09/pca-eof-for-data-with-missing-values.html>
 
+* [Computing and visualizing PCA in R](https://tgmstat.wordpress.com/2013/11/28/computing-and-visualizing-pca-in-r/)
+
 
 另外，还有一个专门作PCA分析的包：[pcaMethods](http://bioconductor.org/packages/devel/bioc/html/pcaMethods.html)
 
