modified:   _posts/2015-11-17-my-oaths.md

--- a/_posts/2015-11-17-my-oaths.md
+++ b/_posts/2015-11-17-my-oaths.md
@@ -93,7 +93,7 @@ Galaxy决定，自此将广发银行列入黑名单。
 发出来的目的主要是以文字来准确记录自己的誓言，以免时间久远后记忆模糊造成*Galaxy*无法判断Galaxy是否守约。  
 允许Galaxy结合以后的实际案例在不改变`源起`精神的情况下，对誓言内容作出适当调整。调整后的誓言内容将在*Galaxy*的确认下`git commit`。且修改历史保留在`git log`中。
 
-话说，前几天被`星际争霸2`吸引，忍不住花300新台币买了世界服的虫族版，因为人族任务早就通了。后来想到`Oath 1`，就突然担心自己违背没。  
+话说，前几天被`星际争霸2`吸引，忍不住花300新台币买了世界服的虫族版，因为人族任务早就通了而神族资料片新出还没降价。后来想到`Oath 1`，就突然担心自己违背没。  
 等回忆起`ISRC`的设定，才安心。一来我买的不是“河蟹”的国服，而来这是电子版，没有光盘，不存在`ISRC号`，遂安心。  
 接着是昨晚看到广发信用卡账单，意识到”财智金“业务被坑后，躺在床上郁闷了许久，决定增加对*Galaxy*的`Oath`。  
 既然是复数的誓言，而且以后还会增加，靠Galaxy个人的记忆就可能溢出了（虽然咱不是[神尾观铃](http://zh.moegirl.org/zh/%E7%A5%9E%E5%B0%BE%E8%A7%82%E9%93%83)那个每次转世都死于传承`Overflow`的がお），所以必须有文字记录。
