modified:   _posts/2015-11-17-my-oaths.md

--- a/_posts/2015-11-17-my-oaths.md
+++ b/_posts/2015-11-17-my-oaths.md
@@ -17,11 +17,11 @@ tags: Galaxy
 于是，八零后的咱面临着一次honor上的危机。如何处理”庄严宣誓“，同时明知无法做到的情况呢？
 
 日本那边的“[恋姬†无双](https://zh.wikipedia.org/zh-hans/戀姬†無雙)”提出了“[真名](https://zh.wikipedia.org/wiki/%E6%88%80%E5%A7%AC%E2%80%A0%E7%84%A1%E9%9B%99%E7%B3%BB%E5%88%97%E8%A7%92%E8%89%B2%E5%88%97%E8%A1%A8)系统”的设定，就是说，每个人物可以同时具有对外的名字，比如“诸葛亮孔明“，和对内的真名，如”朱里“。  
-正式场合，使用对外的名字，比如陌生人之间，或者公众场合、两军对垒啥的。  
+正式场合，使用对外的名字，比如陌生人之间，或者公众场合、作品中两军对垒啥的。  
 亲密伙伴间，互相以真名称呼，比如作品中互相搅姫的妹子之间。
 
 这不是正好么？  
-公共场合，中国公民，只要想作为社会人活下去，必须庄严宣誓“热爱祖国、热爱人民、拥护CCP；时刻为实现共产主义而奋斗；诚实勇敢，有错就改”。然后现实生活中，北大校内有生科院研究生寝室分配问题、北大青年教工与老校工的学区房争议，北大校外有各种与《喜羊羊与灰太狼》中一样黑暗的东西，并且还是邪能胜正占多数、邪不胜正上新闻，共产主义的伟大理想不知道在哪。  
+公共场合，中国公民，只要想作为社会人活下去，必须庄严宣誓“热爱祖国、热爱人民、拥护CCP；时刻为实现共产主义而奋斗；诚实勇敢，有错就改”。然后现实生活中，北大校内有生科院研究生寝室分配问题、北大新入青年教工与每批新房都优先享受的离退休老校工的就新落成的学区房的争议，北大校外有各种与《喜羊羊与灰太狼》中一样黑暗的东西，并且还是邪能胜正占多数、邪不胜正上新闻，共产主义的伟大理想不知道在哪儿。  
 私下，自己总得为自己的honor留点尊严吧。
 
 于是，Galaxy将自己的网名兼作真名了。  
