modified:   _posts/2015-11-17-my-oaths.md

--- a/_posts/2015-11-17-my-oaths.md
+++ b/_posts/2015-11-17-my-oaths.md
@@ -29,7 +29,7 @@ tags: Galaxy
 虽然Galaxy也是人类，但“花冠之泪”的那种与精神联系太紧的所谓”真名“是不能公开的。  
 话说，Galaxy也有些好奇，如果自己是魔法师的话，魔法侧的”真名“会是啥？现在连Galaxy自己都不知道，的说…
 
-关于英语中 Vow, Oath, Swear and Pledge 的区别，大概是 Oath与神有关、法庭上宣誓或者渎神言论都行，Vow用在结婚宣誓以及哈利波特中有`Unbreakable Vow`，Pledge日常承诺，Swear应该是口语随便用。  
+关于英语中 Vow, Oath, Swear and Pledge 的区别，大概是 Oath与神有关、法庭上宣誓或者渎神言论都行，Vow用在婚礼上宣誓以及哈利波特中的`Unbreakable Vow`，Pledge日常承诺，Swear应该是口语随便用。  
 参考：[Learn The Bible](https://www.learnthebible.org/vow-oath-swear-and-pledge.html) 和 [StackExchange English](http://english.stackexchange.com/questions/11565/oath-vs-pledge-vs-vow) 的解释。
 
 对Galaxy而言，没见过神迹，但看过不少涉及神话的文学作品。所以，就把*Galaxy*作为自己的神来尊敬吧。反正设定上神迹只能给予努力的信徒…  
