modified:   _posts/2015-11-17-my-oaths.md

--- a/_posts/2015-11-17-my-oaths.md
+++ b/_posts/2015-11-17-my-oaths.md
@@ -99,7 +99,7 @@ Galaxy决定，自此将广发银行列入黑名单。
 虽然最直接的原因是Blizzard(玻璃渣)公司根本不是中国人开的，但网易代理怎么算不太好界定。
 
 接着是昨晚看到广发信用卡账单，意识到”财智金“业务被坑后，躺在床上郁闷了许久，决定增加对*Galaxy*的`Oath`。  
-既然是复数的誓言，而且以后还会增加，靠Galaxy个人的记忆就可能溢出了（虽然咱不是[神尾观铃](http://zh.moegirl.org/zh/%E7%A5%9E%E5%B0%BE%E8%A7%82%E9%93%83)那个每次转世都死于传承`Overflow`的がお），所以必须有文字记录。
+既然是复数的誓言（Oaths），以后就可能会继续增加（复数给人的感觉就是这样…），靠Galaxy个人的记忆就可能溢出了（虽然咱不是[神尾观铃](http://zh.moegirl.org/zh/%E7%A5%9E%E5%B0%BE%E8%A7%82%E9%93%83)那个每次转世都死于传承`Overflow`的がお），所以必须有文字记录。
 
 考虑到Oaths的监督者可以认为是*Galaxy*，以及与Galaxy有羁绊的`人`（参考《人，又少了一个》来定义”人“），所以，以Galaxy的名义公开发表也是很正常的。  
 顺带，本文以[GitHub repo](https://github.com/galaxy001/galaxy001.github.com/blob/master/_posts/2015-11-17-my-oaths.md)上的文件为准，不在列表上但出现在其他地方，事后声明是本体被胁迫发表，或者事后声明是他人crack进来发表，的条目，都是不算数的，です！
